1: Fix rho divide error in advection. 2: Modify the initial profile reading and interpolation to be VVM-like.

--- a/rundata/input_configs/default_config.json
+++ b/rundata/input_configs/default_config.json
@@ -65,7 +65,11 @@
     },
     "constants": {
         "gravity": 9.806,
-        "Rd": 287.0
+        "Rd": 287.04,
+        "PSFC": 100000,
+        "P0": 100000,
+        "Cp": 1004.5,
+        "Lv": 2.5e6
     },
     "dynamics": {
         "solver": {
