--- a/rundata/input_configs/default_config.json
+++ b/rundata/input_configs/default_config.json
@@ -1,7 +1,7 @@
 {
     "grid": {
-        "nx": 32,
-        "ny": 32,
+        "nx": 256,
+        "ny": 256,
         "nz": 33,
         "n_halo_cells": 2,
         "dx": 500.0,
@@ -10,9 +10,9 @@
         "dz1": 100.0
     },
     "simulation": {
-        "total_time_s": 1500.0,
+        "total_time_s": 86400.0,
         "dt_s": 1.0,
-        "output_interval_s": 50.0
+        "output_interval_s": 150.0
     },
     "boundary_conditions": {
         "default": {
@@ -47,10 +47,16 @@
     },
     "initial_conditions": {
         "format": "txt",
-        "source_file": "/work/aaron900129/VVM_GPU_CPP/rundata/initial_conditions/profile.txt"
+        "source_file": "/work/aaron900129/VVM_GPU_CPP/rundata/initial_conditions/profile_karmen.txt"
+    },
+    "netcdf_reader": {
+        "source_file": "/work/aaron900129/VVM_GPU_CPP/rundata/TOPO.nc",
+        "variables_to_read": {
+            "2d": ["topo"]
+        }
     },
     "output": {
-        "output_dir": "/work/aaron900129/VVM_GPU_CPP/output/test_uv5_sq",
+        "output_dir": "/work/aaron900129/VVM_GPU_CPP/output/Karmen_4km_U10_square_small",
         "enable_netcdf": true,
         "output_filename_prefix": "vvm_output",
         "fields_to_output": ["thbar", "rhobar", "rhobar_up", "htflx_sfc", "u", "v", "w", "th", "xi", "eta", "zeta"],
